Update CLASS 18-19(VARIABLES AND SUMMARY ).ipynb

--- a/CLASS 18-19(VARIABLES AND SUMMARY ).ipynb
+++ b/CLASS 18-19(VARIABLES AND SUMMARY ).ipynb
@@ -33,14 +33,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "isha verma\n",
+      "sameer kumar\n",
       "123\n"
      ]
     }
    ],
    "source": [
     "#we can store strings, number etc\n",
-    "name=\"isha verma\"\n",
+    "name=\"sameer kumar\"\n",
     "print(name)\n",
     "name = 123\n",
     "print(name)"
@@ -54,7 +54,7 @@
    "outputs": [],
    "source": [
     "#s snake case writing\n",
-    "user_one_name=\"isha\" \n",
+    "user_one_name=\"sameer\" \n",
     "# camel case writing(used in java mostly)\n",
     "userOneName=\"yatin\""
    ]
