Update CLASS 18-19(VARIABLES AND SUMMARY ).ipynb

--- a/CLASS 18-19(VARIABLES AND SUMMARY ).ipynb
+++ b/CLASS 18-19(VARIABLES AND SUMMARY ).ipynb
@@ -107,7 +107,7 @@
     "print((2+3)*4/2)\n",
     "\n",
     "#variables\n",
-    "name=\"isha\"\n",
+    "name=\"sameer\"\n",
     "print(name)\n",
     "num1=1234567\n",
     "print(num1)\n",
