--- a/CLASS 18-19(VARIABLES AND SUMMARY ).ipynb
+++ b/CLASS 18-19(VARIABLES AND SUMMARY ).ipynb
@@ -33,7 +33,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sameer kumar\n",
+      "isha verma\n",
       "123\n"
      ]
     }
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "f87e8ddc",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
       "2\n",
       "512\n",
       "10.0\n",
-      "isha\n",
+      "sameer\n",
       "1234567\n"
      ]
     }
@@ -158,7 +158,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -172,7 +172,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "a0d540e4747513a65e87964975f7c81fb7d18508ffc1a8c72ca7d81f5952c4de"
+   }
   }
  },
  "nbformat": 4,
