Update CLASS 18-19(VARIABLES AND SUMMARY ).ipynb

--- a/CLASS 18-19(VARIABLES AND SUMMARY ).ipynb
+++ b/CLASS 18-19(VARIABLES AND SUMMARY ).ipynb
@@ -33,7 +33,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "isha kumar\n",
+      "sameer kumar\n",
       "123\n"
      ]
     }
