--- a/CLASS 20-21(STRING CONCATENATION & USER INPUT).ipynb
+++ b/CLASS 20-21(STRING CONCATENATION & USER INPUT).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "9f985342",
    "metadata": {},
    "outputs": [
@@ -10,16 +10,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Isha  verma\n",
-      "Isha 3\n",
-      "vermavermaverma\n"
+      "sameer  kumar\n",
+      "sameer 3\n",
+      "kumarkumarkumar\n"
      ]
     }
    ],
    "source": [
     "#STRINGS\n",
-    "first_name=\"Isha \"\n",
-    "last_name=\"verma\"\n",
+    "first_name=\"sameer \"\n",
+    "last_name=\"kumar\"\n",
     "full_name=first_name+\" \" +last_name\n",
     "print(full_name)\n",
     "#adding a number\n",
@@ -32,16 +32,7 @@
    "execution_count": 1,
    "id": "902f3563",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "enter your name:ISHA\n",
-      "helloISHA\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#user input\n",
     "name=input(\"enter your name:\")\n",
@@ -51,31 +42,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "79a5411a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "What is your age ?17\n",
-      "your age is17\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "age=input(\"What is your age ?\")\n",
     "print(\"your age is\"+age)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9b8f2fd8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -104,7 +78,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -118,7 +92,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "a0d540e4747513a65e87964975f7c81fb7d18508ffc1a8c72ca7d81f5952c4de"
+   }
   }
  },
  "nbformat": 4,
