--- a/CLASS 24-25(MORE INPUT & STRING FORMATTTING).ipynb
+++ b/CLASS 24-25(MORE INPUT & STRING FORMATTTING).ipynb
@@ -20,8 +20,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "enter your name and age isha 18\n",
-      "isha\n",
+      "sameer\n",
       "18\n"
      ]
     }
@@ -52,20 +51,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello isha your age is 18\n"
+      "hello sameer your age is 18\n"
      ]
     }
    ],
    "source": [
     "#python 3\n",
-    "name=\"isha\"\n",
+    "name=\"sameer\"\n",
     "age=18\n",
     "print(\"hello {} your age is {}\".format(name,age))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "b4e264ed",
    "metadata": {},
    "outputs": [
@@ -73,14 +72,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello isha your age is 18\n",
-      "hello isha your age is 20\n"
+      "hello sameer your age is 18\n",
+      "hello sameer your age is 20\n"
      ]
     }
    ],
    "source": [
     "#python 3.6\n",
-    "name=\"isha\"\n",
+    "name=\"sameer\"\n",
     "age=18\n",
     "print(f\"hello {name} your age is {age}\")\n",
     "print(f\"hello {name} your age is {age+2}\")"
@@ -97,7 +96,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -111,7 +110,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "a0d540e4747513a65e87964975f7c81fb7d18508ffc1a8c72ca7d81f5952c4de"
+   }
   }
  },
  "nbformat": 4,
