--- a/CLASS 28 TO 30(STRING(INDEX,SLICING,ARGUMENT).ipynb
+++ b/CLASS 28 TO 30(STRING(INDEX,SLICING,ARGUMENT).ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "id": "b57d970b",
    "metadata": {},
    "outputs": [
@@ -107,28 +107,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ha\n",
-      "ishave\n",
-      "ihv\n",
-      "ihvra\n",
-      "iar\n",
-      "evahsi\n",
-      "amrevahsi\n",
-      "amrevahsi\n"
+      "me\n",
+      "sameer\n",
+      "sme\n",
+      "smekmr\n",
+      "seka\n",
+      "reemas\n",
+      "mukreemas\n",
+      "ramukreemas\n"
      ]
     }
    ],
    "source": [
     "#LECTURE 30 STEP ARGUMENT\n",
     "\n",
-    "print(\"isha\"[2:4])\n",
-    "print(\"ishaverma\"[0:6:1])\n",
-    "print(\"ishaverma\"[0:6:2])\n",
-    "print(\"ishaverma\"[0::2])\n",
-    "print(\"ishaverma\"[0::3])\n",
-    "print(\"ishaverma\"[5::-1])\n",
-    "print(\"ishaverma\"[8::-1])\n",
-    "print(\"ishaverma\"[-1::-1])"
+    "print(\"sameer\"[2:4])\n",
+    "print(\"sameerkumar\"[0:6:1])\n",
+    "print(\"sameerkumar\"[0:6:2])\n",
+    "print(\"sameerkumar\"[0::2])\n",
+    "print(\"sameerkumar\"[0::3])\n",
+    "print(\"sameerkumar\"[5::-1])\n",
+    "print(\"sameerkumar\"[8::-1])\n",
+    "print(\"sameerkumar\"[-1::-1])"
    ]
   },
   {
@@ -142,7 +142,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -156,7 +156,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "a0d540e4747513a65e87964975f7c81fb7d18508ffc1a8c72ca7d81f5952c4de"
+   }
   }
  },
  "nbformat": 4,
