--- a/CLASS 31-32(EXERCISE 2) CHAPTER 2.ipynb
+++ b/CLASS 31-32(EXERCISE 2) CHAPTER 2.ipynb
@@ -20,8 +20,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "enter your name:isha\n",
-      "ahsi\n"
+      "reemas\n"
      ]
     }
    ],
@@ -94,7 +93,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -108,7 +107,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "a0d540e4747513a65e87964975f7c81fb7d18508ffc1a8c72ca7d81f5952c4de"
+   }
   }
  },
  "nbformat": 4,
