--- a/CLASS 33(STRING METHODS).ipynb
+++ b/CLASS 33(STRING METHODS).ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "97e87688",
    "metadata": {},
    "outputs": [
@@ -20,18 +20,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10\n"
+      "12\n"
      ]
     }
    ],
    "source": [
-    "name=\"isha verma\"\n",
+    "name=\"sameer kumar\"\n",
     "print(len(name))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "dbe35f73",
    "metadata": {},
    "outputs": [
@@ -39,15 +39,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "isha verma\n",
-      "ISHA VERMA\n",
-      "Isha Verma\n",
+      "sameer kumar\n",
+      "SAMEER KUMAR\n",
+      "Sameer Kumar\n",
       "2\n"
      ]
     }
    ],
    "source": [
-    "name=\"Isha verma\"\n",
+    "name=\"sameer kumar\"\n",
     "print(name.lower())\n",
     "print(name.upper())\n",
     "print(name.title())\n",
@@ -97,7 +97,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -111,7 +111,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "a0d540e4747513a65e87964975f7c81fb7d18508ffc1a8c72ca7d81f5952c4de"
+   }
   }
  },
  "nbformat": 4,
