--- a/CLASS 36-37(STRIP& FIND AND REPLACE METHOD).ipynb
+++ b/CLASS 36-37(STRIP& FIND AND REPLACE METHOD).ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "7f7d8ddc",
    "metadata": {},
    "outputs": [
@@ -20,16 +20,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   isha    .............\n",
-      "isha    .............\n",
-      "   isha.............\n",
-      "isha.............\n"
+      "   sameer    .............\n",
+      "sameer    .............\n",
+      "   sameer.............\n",
+      "sameer.............\n"
      ]
     }
    ],
    "source": [
     "# LEFT STRIP\n",
-    "name=\"   isha    \"\n",
+    "name=\"   sameer    \"\n",
     "dots=\".............\"\n",
     "print(name+dots)\n",
     "print(name.lstrip()+dots)\n",
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "7770ace9",
    "metadata": {},
    "outputs": [
@@ -47,12 +47,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ishaverma\n"
+      "sameerkumar\n"
      ]
     }
    ],
    "source": [
-    "name=\"  isha   verma  \" \n",
+    "name=\"  sameer   kumar  \" \n",
     "print(name.replace(\" \",\"\"))"
    ]
   },
@@ -165,7 +165,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -179,7 +179,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "a0d540e4747513a65e87964975f7c81fb7d18508ffc1a8c72ca7d81f5952c4de"
+   }
   }
  },
  "nbformat": 4,
