--- a/CLASS 50 to 52(IF-ELSE, IN KEYWORD, CHECK EMPTY OR NOT).ipynb
+++ b/CLASS 50 to 52(IF-ELSE, IN KEYWORD, CHECK EMPTY OR NOT).ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "dc8af3c8",
    "metadata": {},
    "outputs": [
@@ -63,7 +63,7 @@
     }
    ],
    "source": [
-    "name=\"isha\"\n",
+    "name=\"sameer\"\n",
     "if 'a' in name:\n",
     "    print(\"a is present in name\")\n",
     "else:\n",
@@ -122,7 +122,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -136,7 +136,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "a0d540e4747513a65e87964975f7c81fb7d18508ffc1a8c72ca7d81f5952c4de"
+   }
   }
  },
  "nbformat": 4,
