--- a/CLASS 59-60(CHAPTER-3 EXERCISE-5).ipynb
+++ b/CLASS 59-60(CHAPTER-3 EXERCISE-5).ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "79c2b81c",
    "metadata": {},
    "outputs": [
@@ -47,16 +47,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "enter your nameisha\n",
-      "i:1\n",
       "s:1\n",
-      "h:1\n",
-      "a:1\n"
+      "a:1\n",
+      "m:1\n",
+      "e:2\n",
+      "e:2\n",
+      "r:1\n"
      ]
     }
    ],
    "source": [
-    "name=input(\"enter your name\")\n",
+    "name=input(\"enter your name: \")\n",
     "i=0 #index value\n",
     "while i<len(name):\n",
     "    print(f\"{name[i]}:{name.count(name[i])}\")\n",
@@ -66,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "7f2d722b",
    "metadata": {},
    "outputs": [
@@ -74,8 +75,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "enter your nameharshit\n",
-      "h:2\n"
+      "s:1\n"
      ]
     }
    ],
@@ -94,7 +94,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -108,7 +108,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "a0d540e4747513a65e87964975f7c81fb7d18508ffc1a8c72ca7d81f5952c4de"
+   }
   }
  },
  "nbformat": 4,
